# maskromtool

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  GATOREADME.md  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  affinedecoder.h  asciidialog.cpp  asciidialog.h  asciidialog.ui  buildinstaller.bat  buildrelease-arm64.bat  buildrelease-macos.sh  buildrelease.bat  config.h.in  gatodecoderarm6.cpp  gatodecoderarm6.h  gatodecodercolsdownl.cpp  gatodecodercolsdownl.h  gatodecodercolsdownlswap.cpp  gatodecodercolsdownlswap.h  gatodecodercolsdownr.cpp  gatodecodercolsdownr.h  gatodecodercolsleft.cpp  gatodecodercolsleft.h  gatodecodercolsright.cpp  gatodecodercolsright.h  gatodecoderinfo.cpp  gatodecoderinfo.h  gatodecodermarc4.cpp  gatodecodermarc4.h  gatodecodermsp430.cpp  gatodecodermsp430.h  gatodecodersqueezelr.cpp  gatodecodersqueezelr.h  gatodecodertlcsfont.cpp  gatodecodertlcsfont.h  (+116 more)
.github/workflows/: build.yml
Deployment/: Makefile
Deployment/config/: config.xml
gatotests/: Makefile  README.md
gatotests/arm6/: Makefile  README.md  md5.txt  rom20x7.txt
gatotests/gameboy/: Makefile  gameboy-damaged.txt  gameboy.txt  gameboy.yar  md5.txt
gatotests/marc4/: Makefile  marc4-topleft-bits.txt  md5.txt
gatotests/msp430/: Makefile  md5.txt  msp430.yar  msp430f149.txt  msp430f449_bits.txt
gatotests/seanriddle/: Makefile  README.md
gatotests/seanriddle/fabulousfred/: Makefile  README.md  ffredraw.txt
gatotests/seanriddle/milton6805/: Makefile  md5.txt
gatotests/tlcs/: Makefile  md5.txt  tmp478c434n-font.txt
gatotests/tms320c28x/: Makefile  ascii.txt  md5.txt
gatotests/z8/: Makefile  README.md  md5.txt  wersi.txt
gatotests/zorrom/: Makefile  README.md  md5.txt
tests/: 24bits.json  Makefile  README.md  badalign.json  duplicatebits.json  zerolengthrow.json
